@@ -260,6 +260,26 @@ sub alias
 
 sub is_alias { 0 }
 
+sub aliased_column
+{
+    my $self   = shift;
+    my $prefix = shift;
+    my $name   = shift;
+
+    my $col = $self->column($name)
+        or return;
+
+    return $col->alias( alias_name => $prefix . $col->name() );
+}
+
+sub aliased_columns
+{
+    my $self   = shift;
+    my $prefix = shift;
+
+    return map { $self->aliased_column( $prefix, $_ ) } @_;
+}
+
 sub sql
 {
     return $_[1]->quote_identifier( $_[0]->name() );
@@ -418,6 +438,18 @@ Fey::Table::Alias->new() >>.
 =head2 $table->is_alias()
 
 Always returns false.
+
+=head2 $table->aliased_column( $prefix, $column_name )
+
+This method returns a new L<Fey::Column::Alias> object. The alias's
+name is generated by concatenating the specified prefix and the
+column's real name.
+
+=head2 $table->aliased_columns( $prefix, @column_names )
+
+This method returns a list of new L<Fey::Column::Alias> objects. The
+alias names are generated by concatenating the specified prefix and
+the column's real name.
 
 =head2 $table->sql()
 
